--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "i": "^0.3.7",
     "joi": "^17.9.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.3.1",
-    "nodemon": "^2.0.22",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.3",
+    "npm": "^10.3.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
