--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.3",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
     "i": "^0.3.7",
@@ -29,6 +28,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.3",
     "npm": "^10.3.0",
     "passport": "^0.6.0",
