--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.3",
     "i": "^0.3.7",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
