--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
+    "connect-mongodb-session": "^4.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
